<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputMorgen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeColor="@color/fluorescent_cyan"
        app:boxBackgroundColor="@color/fluorescent_cyan_50" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/morgens"
            android:inputType="number|numberDecimal"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputZwischenMorgen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMorgen"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeColor="@color/fluorescent_cyan"
        app:boxBackgroundColor="@color/fluorescent_cyan_50" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zwischenmahlzeit"
            android:inputType="number|numberDecimal"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputMittag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputZwischenMorgen"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeColor="@color/fluorescent_cyan"
        app:boxBackgroundColor="@color/fluorescent_cyan_50" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mittags"
            android:inputType="number|numberDecimal"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputZwischenMittag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMittag"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeColor="@color/fluorescent_cyan"
        app:boxBackgroundColor="@color/fluorescent_cyan_50" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zwischenmahlzeit2"
            android:inputType="number|numberDecimal"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputAbend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputZwischenMittag"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeColor="@color/fluorescent_cyan"
        app:boxBackgroundColor="@color/fluorescent_cyan_50" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/abends"
            android:inputType="number|numberDecimal"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputSpätmahlzeit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAbend"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeColor="@color/fluorescent_cyan"
        app:boxBackgroundColor="@color/fluorescent_cyan_50" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sp_tmahlzeit"
            android:inputType="number|numberDecimal"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/multiplikatorWerteSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/werte_benehmen"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSpätmahlzeit"
        android:backgroundTint="@color/fluorescent_cyan" />

</androidx.constraintlayout.widget.ConstraintLayout>