<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/celestial_blue">

    <FrameLayout
        android:id="@+id/tocalcutator"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/framelayout_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_calculate_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:text="@string/title_rechner"
            android:textColor="@color/white"
            android:background="@null"
            android:textSize="16sp"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/todiary"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/framelayout_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@null"
            android:scaleType="fitCenter"
            android:layout_marginBottom="10dp"
            android:src="@drawable/baseline_book_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_tagebuch"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@null"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/toactivity"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="160dp"
        android:background="@drawable/framelayout_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_directions_run_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:background="@null"
            android:text="@string/title_activitis"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/tosettings"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/framelayout_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@null"
            android:scaleType="fitCenter"
            android:layout_marginBottom="10dp"
            android:src="@drawable/baseline_settings_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_einstellungen"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@null"
            android:textStyle="bold" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>